force-app/main/default/objects/AE_Product__c/fields/Dose__c.field-meta.xml
<CustomField>
    <fullName>Dose__c</fullName>
    <label>Dose</label>
    <length>50</length>
    <type>Text</type>
</CustomField>