force-app/main/default/objects/AE_Product__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>