force-app/main/default/objects/AE_Product__c/fields/Is_this_a_technical_complaint__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_technical_complaint__c</fullName>
    <label>Is this a technical complaint?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>