force-app/main/default/objects/AE_Product__c/fields/New_Potential_Adverse_Event__c.field-meta.xml
<CustomField>
    <fullName>New_Potential_Adverse_Event__c</fullName>
    <label>New Potential Adverse Event</label>
    <referenceTo>New_Potential_Adverse_Event__c</referenceTo>
    <relationshipLabel>AE Products</relationshipLabel>
    <relationshipName>AE_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>