force-app/main/default/objects/AE_Product__c/fields/Product_pickup_availability_status_is__c.field-meta.xml
<CustomField>
    <fullName>Product_pickup_availability_status_is__c</fullName>
    <label>Product pickup availability status is</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>