force-app/main/default/objects/AE_Product__c/fields/Route_of_administering__c.field-meta.xml
<CustomField>
    <fullName>Route_of_administering__c</fullName>
    <label>Route of administering</label>
    <length>100</length>
    <type>Text</type>
</CustomField>