force-app/main/default/objects/AE_Product__c/fields/Technical_complaint__c.field-meta.xml
<CustomField>
    <fullName>Technical_complaint__c</fullName>
    <label>Technical complaint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>