force-app/main/default/objects/AE_Product__c/fields/Therapy_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Therapy_Start_Date__c</fullName>
    <label>Therapy Start Date</label>
    <type>Date</type>
</CustomField>